Fix app.js link and update interface logic

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
     </article>
   </section>
 </main>
-<script src="https://fjdaz.com/bergson/statics/app.js"></script>
+<script src="/static/app.js"></script>">
 </body>
 </html>
