Réorganise interface: historique en haut, formulaire en bas + scroll auto

--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
       <h2>Henri <span>Bergson</span></h2>
       <img src="https://fjdaz.com/bergson/statics/img/Bergson.png" alt="Henri Bergson"> </button>
       <div class="dialogue" hidden>
+        <div class="qa-history"></div>
         <form class="qa-form">
           <textarea id="question-bergson" name="question"></textarea>
           <input type="image" src="https://fjdaz.com/bergson/statics/img/Submit.png" alt="envoyer">
-          </input>
         </form>
-        <div class="qa-history"></div>
       </div>
     </article>
     
@@ -71,12 +70,11 @@
       <h2>Immanuel <span>Kant</span></h2>
       <img src="https://fjdaz.com/bergson/statics/img/Kant.png" alt="Immanuel Kant"> </button>
       <div class="dialogue" hidden>
-        <form class="qa-form">
-          <textarea id="question-kant" name="question"></textarea>
-          <input type="image" src="https://fjdaz.com/bergson/statics/img/Submit.png" alt="envoyer">
-          </input>
-        </form>
         <div class="qa-history"></div>
+        <form class="qa-form">
+          <textarea id="question-bergson" name="question"></textarea>
+          <input type="image" src="https://fjdaz.com/bergson/statics/img/Submit.png" alt="envoyer">
+        </form>
       </div>
     </article>
     
@@ -86,18 +84,17 @@
       <h2>Baruch <span>Spinoza</span></h2>
       <img src="https://fjdaz.com/bergson/statics/img/Spinoza.png" alt="Baruch Spinoza"> </button>
       <div class="dialogue" hidden>
-        <form class="qa-form">
-          <textarea id="question-spinoza" name="question"></textarea>
-          <input type="image" src="https://fjdaz.com/bergson/statics/img/Submit.png" alt="envoyer">
-          </input>
-        </form>
         <div class="qa-history"></div>
+        <form class="qa-form">
+          <textarea id="question-bergson" name="question"></textarea>
+          <input type="image" src="https://fjdaz.com/bergson/statics/img/Submit.png" alt="envoyer">
+        </form>
       </div>
     </article>
   </section>
 </main>
 <script src="/static/app.js">
   
-</script>">
+</script>
 </body>
 </html>
