Fix: JS fjdaz.com + Prompts Kant/Spinoza anti-exposé

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </article>
   </section>
 </main>
-<script src="/static/app.js">
+<script src="https://fjdaz.com/bergson/statics/app.js">
   
 </script>
 </body>
