--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bergson and Friends</title>
 <link rel="stylesheet" href="https://fjdaz.com/bergson/statics/style.css">
+<link rel="stylesheet" href="https://fjdaz.com/bergson/statics/responsive.css" media="screen and (max-width: 768px)">
 </style>
 </head>
 <script>
