Add version parameter to app.js to bypass cache

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </main>
 </div>
 
-<script src="https://fjdaz.com/bergson/statics/app.js"></script>
+<script src="https://fjdaz.com/bergson/statics/app.js?v=2"></script>
 
 </body>
 </html>
