Fix: point to Render backend instead of Railway

--- a/index_spinoza.html
+++ b/index_spinoza.html
@@ -84,8 +84,8 @@
 </div>
 
 <script>
-// Configuration API Railway
-const API_BASE_URL = 'https://bergson-api-production.up.railway.app';
+// Configuration API Render
+const API_BASE_URL = 'https://bergson-and-friends.onrender.com';
 
 // État conversation
 let conversationHistory = [];
