Fix: Réduire MAX_EXCHANGES à 5 pour tests rapides

--- a/Spinoza_Secours_HF/index_spinoza.html
+++ b/Spinoza_Secours_HF/index_spinoza.html
@@ -402,7 +402,7 @@ console.log('⌨️  Enter pour envoyer, Shift+Enter pour nouvelle ligne');
 // 🎮 MAÏEUTHON - Système de scoring
 // ============================================================================
 
-const MAX_EXCHANGES = 8; // Nombre maximum d'échanges
+const MAX_EXCHANGES = 5; // Nombre maximum d'échanges (réduit pour tests)
 let exchangeCount = 0;
 let scoreFront = 100; // Score de base
 let dialogueText = ''; // Texte complet du dialogue pour évaluation
